# extractpdfmark

./: .dir-locals.el  .gitignore  Makefile.am  NEWS  README.ja.md  README.md  Readme.ja.md  Readme.md  autogen.sh  configure.ac  destname-private.hh  destname.cc  destname.hh  encodename.cc  encodename.hh  main.cc  output-pdfmark.hh  pagemode.cc  pagemode.hh  poppler-core.cc
m4/: ac_check_prog_ver.m4
man/: Makefile.am  extractpdfmark.1
src/: Makefile.am  cmdlineparse.hh  encodename.cc  encodename.hh  iconv_wrapper.hh  main.cc  output-pdfmark.cc  output-pdfmark.hh  utf16.cc  utf16.hh  utf8.cc  utf8.hh
src/poppler-core/: Makefile.am  destname-private.hh  destname.cc  destname.hh  encodename.cc  encodename.hh  pagemode.cc  pagemode.hh  poppler-core.cc  poppler-core.hh
src/poppler-cpp/: Makefile.am  destname-cpp.cc  pagemode-cpp.cc  poppler-cpp.cc  poppler-cpp.hh
src/poppler-glib/: Makefile.am  destname-glib.cc  pagemode-glib.cc  poppler-glib.cc  poppler-glib.hh
test/: Makefile.am  addnamedict.ps  binary.tex  destonly.tex  desttype.tex  nodest.tex  pagemode-fullscreen.tex  pagemode-thumbs.tex  pagemode-usenone.tex  pdfdocencoding.tex  special-chars.tex  test-desttype-round.sh  test-expected-pdfmark.sh  test-round.sh  utf16.tex  utf8.tex
